--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,151 +1,154 @@
-<!--The content below is only a placeholder and can be replaced.-->
 
-<div class="container">
+<router-outlet></router-outlet>
 
+<!--&lt;!&ndash;The content below is only a placeholder and can be replaced.&ndash;&gt;-->
 
-  <div class="ui-g">
-    <div class="ui-g-12 ui-g-nopad">
-      <div class="ui-g">
-        <div class="ui-g-5">
-          <p-card [style]="{float: 'left', width: '100%', height: '100%'}">
+<!--<div class="container">-->
+  <!--<p-button (onClick)="navigateHisto()" icon="fa fa-history" label="History"></p-button>-->
 
-          <button *ngIf="!started" pButton type="button" label="Start" icon="fa-check" (click)="initSprint()"
-                  class="ui-button-info" iconPos="left" style="margin-bottom: 1em;"></button>
-          <button *ngIf="started" pButton type="button" label="Finish" icon="fa-rocket" (click)="finishSprint()"
-                  class="ui-button-info" iconPos="left" style="margin-bottom: 1em;"></button>
+  <!--<div class="ui-g">-->
+    <!--<div class="ui-g-12 ui-g-nopad">-->
+      <!--<div class="ui-g">-->
+        <!--<div class="ui-g-5">-->
+          <!--<p-card [style]="{float: 'left', width: '100%', height: '100%'}">-->
 
-          <p-growl [(value)]="msgs"></p-growl>
+          <!--<button *ngIf="!started" pButton type="button" label="Start" icon="fa-check" (click)="initSprint()"-->
+                  <!--class="ui-button-info" iconPos="left" style="margin-bottom: 1em;"></button>-->
+          <!--<button *ngIf="started" pButton type="button" label="Finish" icon="fa-rocket" (click)="finishSprint()"-->
+                  <!--class="ui-button-info" iconPos="left" style="margin-bottom: 1em;"></button>-->
 
-          <p-table [value]="projectList" rowHover="true">
+          <!--<p-growl [(value)]="msgs"></p-growl>-->
 
-            <ng-template pTemplate="header">
-              <tr>
-                <th>Nb weeks
-                </th>
-                <th>Start </th>
-                <th>End </th>
-                <th>Days left </th>
-              </tr>
-              <tr>
-                <th>
-                  <span *ngIf="!started; then inputNbrWeeks else dataNbrWeeks"></span>
-                  <ng-template #inputNbrWeeks><input type="text" [(ngModel)]="nbrWeeks" placeholder="Nb weeks" style="width: 100%;"></ng-template>
-                  <ng-template #dataNbrWeeks>{{nbrWeeks}}</ng-template>
-                </th>
-                <th>{{startDate | date:'longDate':'':'fr'}}</th>
-                <th>{{endDate | date:'longDate':'':'fr'}}</th>
-                <th>{{daysLeft}}</th>
-              </tr>
-              <tr>
-                <th>Projects
-                  <span *ngIf="!started; then inputNbrProjects else dataNbrProjects"></span>
-                  <ng-template #inputNbrProjects><input type="text" style="width: 100%;" [(ngModel)]="nbrProjects" placeholder="Nb projects"></ng-template>
-                  <ng-template #dataNbrProjects>{{nbrProjects}}</ng-template>
-                <th>Values</th>
-                <th>Add</th>
-                <th>Done</th>
-              </tr>
-            </ng-template>
+          <!--<p-table [value]="projectList" rowHover="true">-->
 
-            <ng-template pTemplate="body" let-rowData>
+            <!--<ng-template pTemplate="header">-->
+              <!--<tr>-->
+                <!--<th>Nb weeks-->
+                <!--</th>-->
+                <!--<th>Start </th>-->
+                <!--<th>End </th>-->
+                <!--<th>Days left </th>-->
+              <!--</tr>-->
+              <!--<tr>-->
+                <!--<th>-->
+                  <!--<span *ngIf="!started; then inputNbrWeeks else dataNbrWeeks"></span>-->
+                  <!--<ng-template #inputNbrWeeks><input type="text" [(ngModel)]="nbrWeeks" placeholder="Nb weeks" style="width: 100%;"></ng-template>-->
+                  <!--<ng-template #dataNbrWeeks>{{nbrWeeks}}</ng-template>-->
+                <!--</th>-->
+                <!--<th>{{startDate | date:'longDate':'':'fr'}}</th>-->
+                <!--<th>{{endDate | date:'longDate':'':'fr'}}</th>-->
+                <!--<th>{{daysLeft}}</th>-->
+              <!--</tr>-->
+              <!--<tr>-->
+                <!--<th>Projects-->
+                  <!--<span *ngIf="!started; then inputNbrProjects else dataNbrProjects"></span>-->
+                  <!--<ng-template #inputNbrProjects><input type="text" style="width: 100%;" [(ngModel)]="nbrProjects" placeholder="Nb projects"></ng-template>-->
+                  <!--<ng-template #dataNbrProjects>{{nbrProjects}}</ng-template>-->
+                <!--<th>Values</th>-->
+                <!--<th>Add</th>-->
+                <!--<th>Done</th>-->
+              <!--</tr>-->
+            <!--</ng-template>-->
 
-              <tr>
-                <span *ngIf="rowData.name==='Total'; then dataField else inputName"></span>
-                <ng-template #inputName>
-                  <td pEditableColumn style="height: 30px; cursor: pointer;">
-                    <p-cellEditor>
-                      <ng-template pTemplate="input" >
-                        <input [(ngModel)]="rowData.name" type="text" placeholder="Name"/>
-                      </ng-template>
-                      <ng-template pTemplate="output">
-                        {{rowData.name}}
-                      </ng-template>
-                    </p-cellEditor>
-                  </td>
-                  <td pEditableColumn style="height: 30px; cursor: pointer;">
-                    <p-cellEditor>
-                      <ng-template pTemplate="input">
-                        <input  [(ngModel)]="rowData.value" (input)="computeTotal()" type="number" placeholder="Value" value="{{rowData.value}}"/>
-                      </ng-template>
-                      <ng-template pTemplate="output">
-                        {{rowData.value}}
-                      </ng-template>
-                    </p-cellEditor>
-                  </td>
-                  <td pEditableColumn style="height: 30px; cursor: pointer;">
-                    <p-cellEditor>
-                      <ng-template pTemplate="input">
-                        <input [(ngModel)]="rowData.add" (input)="computeTotal()" type="number"  placeholder="Add" value="{{rowData.add}}"/>
-                      </ng-template>
-                      <ng-template pTemplate="output">
-                        {{rowData.add}}
-                      </ng-template>
-                    </p-cellEditor>
-                  </td>
-                  <td pEditableColumn style="height: 30px; cursor: pointer;">
-                    <p-cellEditor>
-                      <ng-template pTemplate="input" >
-                        <input [(ngModel)]="rowData.done" (input)="computeTotal()" type="number" placeholder="Done" value="{{rowData.done}}"/>
-                      </ng-template>
-                      <ng-template pTemplate="output">
-                        {{rowData.done}}
-                      </ng-template>
-                    </p-cellEditor>
-                  </td>
+            <!--<ng-template pTemplate="body" let-rowData>-->
 
-                </ng-template>
-                <ng-template #dataField>
-                  <td >
-                    {{rowData.name}}
-                  </td>
-                  <td style="text-align: center">
-                    {{rowData.value}}
-                  </td>
-                  <td style="text-align: center">
-                    {{rowData.add}}
-                  </td>
-                  <td style="text-align: center">
-                    {{rowData.done}}
-                  </td>
-                </ng-template>
-              </tr>
-            </ng-template>
+              <!--<tr>-->
+                <!--<span *ngIf="rowData.name==='Total'; then dataField else inputName"></span>-->
+                <!--<ng-template #inputName>-->
+                  <!--<td pEditableColumn style="height: 30px; cursor: pointer;">-->
+                    <!--<p-cellEditor>-->
+                      <!--<ng-template pTemplate="input" >-->
+                        <!--<input [(ngModel)]="rowData.name" type="text" placeholder="Name"/>-->
+                      <!--</ng-template>-->
+                      <!--<ng-template pTemplate="output">-->
+                        <!--{{rowData.name}}-->
+                      <!--</ng-template>-->
+                    <!--</p-cellEditor>-->
+                  <!--</td>-->
+                  <!--<td pEditableColumn style="height: 30px; cursor: pointer;">-->
+                    <!--<p-cellEditor>-->
+                      <!--<ng-template pTemplate="input">-->
+                        <!--<input  [(ngModel)]="rowData.value" (input)="computeTotal()" type="number" placeholder="Value" value="{{rowData.value}}"/>-->
+                      <!--</ng-template>-->
+                      <!--<ng-template pTemplate="output">-->
+                        <!--{{rowData.value}}-->
+                      <!--</ng-template>-->
+                    <!--</p-cellEditor>-->
+                  <!--</td>-->
+                  <!--<td pEditableColumn style="height: 30px; cursor: pointer;">-->
+                    <!--<p-cellEditor>-->
+                      <!--<ng-template pTemplate="input">-->
+                        <!--<input [(ngModel)]="rowData.add" (input)="computeTotal()" type="number"  placeholder="Add" value="{{rowData.add}}"/>-->
+                      <!--</ng-template>-->
+                      <!--<ng-template pTemplate="output">-->
+                        <!--{{rowData.add}}-->
+                      <!--</ng-template>-->
+                    <!--</p-cellEditor>-->
+                  <!--</td>-->
+                  <!--<td pEditableColumn style="height: 30px; cursor: pointer;">-->
+                    <!--<p-cellEditor>-->
+                      <!--<ng-template pTemplate="input" >-->
+                        <!--<input [(ngModel)]="rowData.done" (input)="computeTotal()" type="number" placeholder="Done" value="{{rowData.done}}"/>-->
+                      <!--</ng-template>-->
+                      <!--<ng-template pTemplate="output">-->
+                        <!--{{rowData.done}}-->
+                      <!--</ng-template>-->
+                    <!--</p-cellEditor>-->
+                  <!--</td>-->
 
-            <ng-template pTemplate="summary" let-rowData>
-              <div style="text-align:left">
-                <button type="button" [disabled]="!started" pButton icon="fa-plus" (click)="showDialogToAdd()" label="Add"></button>
-                <button type="button" [disabled]="!started" pButton icon="fa fa-print" (click)="printPage()" label="Print"></button>
-                <button type="button" [disabled]="!started" pButton icon="fa fa-floppy-o" (click)="saveListProject()" label="Save" class="ui-button-success"></button>
-              </div>
-            </ng-template>
-          </p-table>
+                <!--</ng-template>-->
+                <!--<ng-template #dataField>-->
+                  <!--<td >-->
+                    <!--{{rowData.name}}-->
+                  <!--</td>-->
+                  <!--<td style="text-align: center">-->
+                    <!--{{rowData.value}}-->
+                  <!--</td>-->
+                  <!--<td style="text-align: center">-->
+                    <!--{{rowData.add}}-->
+                  <!--</td>-->
+                  <!--<td style="text-align: center">-->
+                    <!--{{rowData.done}}-->
+                  <!--</td>-->
+                <!--</ng-template>-->
+              <!--</tr>-->
+            <!--</ng-template>-->
 
-          <p-dialog header="Project Details" [(visible)]="displayDialog" [responsive]="true" showEffect="fade" [modal]="true" [width]="400">
-            <div class="ui-g ui-fluid" *ngIf="project">
-              <div class="ui-g-12">
-                <div class="ui-g-4">
-                  <label for="projectname">Name</label>
-                </div>
-                <div class="ui-g-8">
-                  <input pInputText id="projectname" [(ngModel)]="project.name" />
-                </div>
-              </div>
-            </div>
-            <p-footer>
-              <div class="ui-dialog-buttonpane ui-helper-clearfix">
-                <button type="button" pButton icon="fa-check" (click)="save()" label="Save"></button>
-              </div>
-            </p-footer>
-          </p-dialog>
-        </p-card>
-        </div>
-        <div class="ui-g-7">
-          <p-card  [style]="{float: 'right', width: '100%', height: '100%'}">
-          <p-chart type="line" [data]="data" [options]="options" ></p-chart>
-        </p-card>
-        </div>
-      </div>
-    </div>
-  </div>
+            <!--<ng-template pTemplate="summary" let-rowData>-->
+              <!--<div style="text-align:left">-->
+                <!--<button type="button" [disabled]="!started" pButton icon="fa-plus" (click)="showDialogToAdd()" label="Add"></button>-->
+                <!--<button type="button" [disabled]="!started" pButton icon="fa fa-print" (click)="printPage()" label="Print"></button>-->
+                <!--<button type="button" [disabled]="!started" pButton icon="fa fa-floppy-o" (click)="saveListProject()" label="Save" class="ui-button-success"></button>-->
+              <!--</div>-->
+            <!--</ng-template>-->
+          <!--</p-table>-->
 
-</div>
+          <!--<p-dialog header="Project Details" [(visible)]="displayDialog" [responsive]="true" showEffect="fade" [modal]="true" [width]="400">-->
+            <!--<div class="ui-g ui-fluid" *ngIf="project">-->
+              <!--<div class="ui-g-12">-->
+                <!--<div class="ui-g-4">-->
+                  <!--<label for="projectname">Name</label>-->
+                <!--</div>-->
+                <!--<div class="ui-g-8">-->
+                  <!--<input pInputText id="projectname" [(ngModel)]="project.name" />-->
+                <!--</div>-->
+              <!--</div>-->
+            <!--</div>-->
+            <!--<p-footer>-->
+              <!--<div class="ui-dialog-buttonpane ui-helper-clearfix">-->
+                <!--<button type="button" pButton icon="fa-check" (click)="save()" label="Save"></button>-->
+              <!--</div>-->
+            <!--</p-footer>-->
+          <!--</p-dialog>-->
+        <!--</p-card>-->
+        <!--</div>-->
+        <!--<div class="ui-g-7">-->
+          <!--<p-card  [style]="{float: 'right', width: '100%', height: '100%'}">-->
+          <!--<p-chart type="line" [data]="data" [options]="options" ></p-chart>-->
+        <!--</p-card>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
+
+<!--</div>-->
