--- a/src/app/historique/historique.component.html
+++ b/src/app/historique/historique.component.html
@@ -1,23 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<div class="container">
-
 <p-button style="margin-top: 5em; margin-left: 2em;" (onClick)="navigateToHome()" icon="fa fa-home" label="Home"></p-button>
 
+<div class="container">
+
+
   <p-card  [style]="{width: '100%', height: '100%'}">
-    <p>Marcel</p>
     <p-growl [value]="msgs"></p-growl>
-    <div *ngFor="let item of returnListSprint; let i = index;">
-      <p-panel header="{{item.sprintid}} {{i}}" [toggleable]="false" [style]="{'margin-bottom':'20px'}">
-        The story begins as Don Vito Corleone, the head of a New York Mafia family, oversees his daughter's wedding.
-      </p-panel>
+    <div class="ui-g">
+
+      <p-accordion [multiple]="true" [activeIndex]="tabActive" (onOpen)="itemClicked($event)">
+        <p-accordionTab *ngFor="let item of returnListSprint; let i = index;" >
+          <p-header>
+           Sprint: {{item.sprintid}} - Weeks: {{item.nbrweeks}} - Start: {{item.startdate | date:'longDate':'':'fr'}} - End: {{item.enddate| date:'longDate':'':'fr'}}
+          </p-header>
+
+          <p-table [value]="dataOpenTabProject[i]" [style]="{'padding-bottom': '1em'}">
+            <ng-template pTemplate="header">
+              <tr>
+                <th>Project</th>
+                <th>Values</th>
+                <th>Add</th>
+                <th>Done</th>
+              </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-project>
+              <tr>
+                <td>{{project.name}}</td>
+                <td>{{project.value}}</td>
+                <td>{{project.add}}</td>
+                <td>{{project.done}}</td>
+              </tr>
+            </ng-template>
+          </p-table>
+
+
+          <p-chart type="line" [data]="listDataGraph[i]" [options]="options" ></p-chart>
+        </p-accordionTab>
+      </p-accordion>
+
+      <!---->
+      <!--<p-panel header="{{item.sprintid}} {{i}}" [toggleable]="true" [collapsed]="true" [style]="{'margin-bottom':'20px'}">-->
+        <!--The story begins as Don Vito Corleone, the head of a New York Mafia family, oversees his daughter's wedding.-->
+      <!--</p-panel>-->
     </div>
   </p-card>
 </div>
-</body>
-</html>
+
