--- a/src/app/historique/historique.component.html
+++ b/src/app/historique/historique.component.html
@@ -1,17 +1,20 @@
 <p-button style="margin-top: 5em; margin-left: 2em;" (onClick)="navigateToHome()" icon="fa fa-home" label="Home"></p-button>
 
 <div class="container">
+  <p-confirmDialog></p-confirmDialog>
+  <p-growl [value]="msgs"></p-growl>
 
 
   <p-card  [style]="{width: '100%', height: '100%'}">
-    <p-growl [value]="msgs"></p-growl>
 
-      <p-accordion [multiple]="true" [activeIndex]="tabActive" (onOpen)="itemClicked($event)" style="margin-right: 1em;">
-        <p-accordionTab *ngFor="let item of returnListSprint; let i = index;" >
+      <p-accordion [multiple]="true" [activeIndex]="tabActive" (onOpen)="itemClicked($event)" >
+        <p-accordionTab *ngFor="let item of returnListSprint; let i = index;" style="margin-right: 1em;" >
           <p-header>
            Sprint: {{item.sprintid}} - Weeks: {{item.nbrweeks}} - Start: {{item.startdate | date:'longDate':'':'fr'}} - End: {{item.enddate| date:'longDate':'':'fr'}}
           </p-header>
-
+          <div>
+            <p-button style="margin-bottom: 1em;" (onClick)="deleteSprint(item.sprintid)" icon="fa fa-eraser" label="Delete"></p-button>
+          </div>
           <p-table [value]="dataOpenTabProject[i]" [style]="{'padding-bottom': '1em'}">
             <ng-template pTemplate="header">
               <tr>
